opam-version: "2.0"
name: "bantorra-web-resolvers"
version: "~dev"
synopsis: "Resolvers for the Bantorra framework that access online repositories"
description: """
This package is developed for managing libraries of source-based data.
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "favonia <favonia@gmail.com>"
license: "Apache 2.0"
homepage: "https://github.com/favonia/bantorra"
bug-reports: "https://github.com/favonia/bantorra/issues"
dev-repo: "git+https://github.com/favonia/bantorra.git"
depends: [
  "bantorra"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depexts: [
  ["git"]
]
