opam-version: "2.0"
name: "bantorra-web-resolvers"
synopsis: "Resolvers for the Bantorra framework that access online repositories"
description: """
This package defines several library resolvers that access the online repositories. They can be used in the Bantorra framework easily.
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "favonia <favonia@gmail.com>"
license: "Apache 2.0"
homepage: "https://github.com/favonia/bantorra"
bug-reports: "https://github.com/favonia/bantorra/issues"
dev-repo: "git+https://github.com/favonia/bantorra.git"
depends: [
  "bantorra" {= version}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
depexts: [
  ["git"]
]
