opam-version: "2.0"
name: "bantorra"
synopsis: "Extensible Library Management and Path Resolution"
description: """
Managing libraries and resolving unit paths within them.
"""
maintainer: ["favonia <favonia@gmail.com>"]
authors: ["The RedPRL Development Team"]
license: "Apache-2.0 WITH LLVM-exception"
homepage: "https://github.com/RedPRL/bantorra"
bug-reports: "https://github.com/RedPRL/bantorra/issues"
dev-repo: "git+https://github.com/RedPRL/bantorra.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "5.1"}
  "asai" {>= "0.1"}
  "algaeff" {>= "0.2"}
  "bos" {>= "0.2"}
  "bwd" {>= "2.1"}
  "conf-git" {post}
  "curly" {>= "0.2"}
  "ezjsonm" {>= "1.2"}
  "json-data-encoding" {>= "0.9"}
  "ocamlfind" {>= "1.8"}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
depexts: [
  ["git"]
]
